# RK

./: .gitignore  CMakeLists.txt  CpackConfig.cmake  abstractFactory.cpp
.github/workflows/: build.yml
aFactory/: CMakeLists.txt  abstrfactory.hpp
abstractFactory/: CMakeLists.txt  abstrfactory.cpp  abstrfactory.hpp
src/: main.cpp
tests/: factoryTest.cpp
